# ResumeForge

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  SECURITY.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.claude/commands/: analyze-cv.md  audit-truthfulness.md  tailor-cv.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  tauri-release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: eslint.config.mjs  package.json
apps/web/scripts/: tauri-build.mjs
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/app/: globals.css  layout.tsx  page.tsx
src/components/: audit-panel.tsx  missing-keywords.tsx  report-tab.tsx  resume-preview.tsx  resumeforge-app.tsx  score-dashboard.tsx
src/components/chat/: chat-pane.tsx
src/components/layout/: sidebar.tsx  (+2 more)
src/lib/: analyze.ts  i18n.ts  types.ts  types.ts.bak
src/tests/: audit-generated-resume.test.ts  job-offer-input-validation.test.ts  llm-provider.test.ts  parse-job-text.test.ts  parse-resume-html.test.ts  score-compatibility.test.ts  tailor-resume.test.ts
(+80 files in other folders)
